--- a/src/views/tablaUsers.ejs
+++ b/src/views/tablaUsers.ejs
@@ -6,20 +6,20 @@
 <body class="container">
 
 <header>
-  
+    <%- include('partials/headerL') %>
+  <hr/>
 </header>
-
+ 
 <main>
 
   <h3 style="color:#050;"><%= mensajeExitoso %></h3>
-  <a href="/api/v1/Users/alta" class="btn btn-primary">Cargar Usuario nuevo +</a>
-  <br><hr/>
+  <a href="/users/alta" class="btn btn-primary">Cargar Usuario nuevo +</a>
+  <br>
 <h2>Listado de Usuarios:</h2>
 <table class="table table-striped">
     <tr>
         <th>Id</th>
-        <th>Nombre</th>
-        <th>Apellido</th>
+        <th>UserName</th>
         <th>Email</th>
         <th>ACCIONES</th>
         <th></th>
@@ -27,15 +27,16 @@
     </tr>
     <% users.forEach(function(user) { %>
         <tr>
+         
+
             <td><%= user.dataValues.id %></td>
-            <td><%= user.dataValues.firstName %></td>
-            <td><%= user.dataValues.lastName %></td>
+            <td><%= user.dataValues.username %></td>
             <td><%= user.dataValues.email %></td>
-            <td><a href="/api/v1/Users/detalle/<%= user.dataValues.id %>" class="btn btn-info">Detalle</a>
-                <a href="/api/v1/Users/modificar/<%= user.dataValues.id %>"  class="btn btn-warning">Editar</a></td>
-            <td><a href="/api/v1/Users/borrando/<%= user.dataValues.id %>"  onclick="return confirm('Estás Seguro de borrar eso?')"  class="btn btn-danger">Borrar</a></td>
+            <td><a href="/users/detalle/<%= user.dataValues.id %>" class="btn btn-info">Detalle</a>
+                <a href="/users/modificar/<%= user.dataValues.id %>"  class="btn btn-warning">Editar</a></td>
+            <td><a href="/users/borrando/<%= user.dataValues.id %>"  onclick="return confirm('Estás Seguro de borrar Ese usuario?')"  class="btn btn-danger">Borrar</a></td>
         </tr>
-     
+       
     <% }); %>
     </table>
     
