--- a/src/views/hola.ejs
+++ b/src/views/hola.ejs
@@ -11,8 +11,8 @@
 </header>
 
 <main>
-    <h4>Bienvenido al sitio de usuarios y tareas:</h4>
-    <p>Debe loguearse primero para poder ver usuarios, tareas y efectuar operaciones CRUD...</p>
+    <h4>Bienvenido al sitio de usuarios:</h4>
+    <p>Puede en Users efectuar operaciones de CRUD...</p>
 
     
 </main>
